--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ footer {
         grid-gap: 1.5rem;
     }
     .pose-container{
-   
+     max-width: 1300px;
         width: 90%;
         display: grid;
         grid-template-columns: 1fr 1fr;
