--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ footer {
   border-radius: var(--bor-40);
   font-size: 1.2rem;
   font-weight: 700;
+  cursor: pointer;
 }
 #searchForm button:hover {
   background-color: var(--clr-primary);
